# CTFd-Docker-Challenges

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  ISSUES.md  MIGRATION.md  README.md  TESTING.md  TODO.md  docker-compose.test.yml  docker-compose.yaml  dockerfile  pyproject.toml
.github/workflows/: auto-bump.yml  version-bump-check.yml
agent-docs/architecture/: decisions.md  limitations.md  overview.md  patterns.md
agent-docs/development/: api-reference.md  building.md  deployment.md  setup.md  testing.md
docker_challenges/: __init__.py  config.json  constants.py  validators.py
docker_challenges/api/: __init__.py  api.py
docker_challenges/assets/: constants.js  create.html  create.js  create_service.html  create_service.js  stub_create.js  stub_create_service.js  stub_update.js  stub_update_service.js  stub_view.js  update.html  update.js  update_service.html  update_service.js  view.html  view.js
docker_challenges/assets/shared/: modalUtils.js  portManagement.js  secretManagement.js
docker_challenges/functions/: containers.py  general.py  services.py
docker_challenges/models/: container.py  models.py  service.py
docker_challenges/templates/: admin_docker_secrets.html  admin_docker_status.html  docker_config.html
scripts/: verify-migration.sh
tests/: __init__.py  conftest.py  test_api_helpers.py  test_api_secret_endpoints.py  test_challenge_delete_cleanup.py  test_challenge_logic.py  test_cleanup_on_solve.py  test_container_health.py  test_container_workflow.py  test_exposed_ports_auto_populate.py  test_general_docker_api.py  test_general_extractors.py  test_port_assignment.py  test_secret_crud.py  test_secrets_parser.py  test_validators.py
tests/stubs/: __init__.py  ctfd_stubs.py
wrong_flag_submissions/: __init__.py  config.json
wrong_flag_submissions/templates/: wrong_flags.html
