[project]
name = "ctfd-docker-challenges"
version = "1.0.0"
description = "Docker-based challenge support for CTFd"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"

dependencies = [
    "Flask>=2.0.0",
    "flask-wtf>=1.0.0",
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["docker_challenges"]

[tool.ruff]
line-length = 100
target-version = "py39"

# Exclude directories
exclude = [
    ".git",
    "__pycache__",
    "venv",
    ".venv",
    "node_modules",
    ".pytest_cache",
    ".mypy_cache",
    "test-images",
]

[tool.ruff.lint]
# Enable comprehensive rule sets
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear (common bug patterns)
    "C4",  # flake8-comprehensions (better list/dict comprehensions)
    "UP",  # pyupgrade (upgrade syntax for newer Python)
    "S",   # flake8-bandit (security)
    "T20", # flake8-print (detect print statements)
    "SIM", # flake8-simplify (simplification suggestions)
]

# Ignore specific rules
ignore = [
    "E501",  # line too long (handled by formatter)
    "S101",  # use of assert (common in tests)
    "T201",  # print statements (used for debugging in development)
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Ignore security checks in test files and scripts
"tests/**/*.py" = ["S"]
"scripts/**/*.py" = ["S"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Use Unix line endings
line-ending = "lf"

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.0"
version_files = [
    "pyproject.toml:version",
]
tag_format = "v$version"
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"
changelog_incremental = true
changelog_start_rev = "e1a0c60"  # Latest commit before commitizen setup
